[gd_scene load_steps=9 format=2]

[ext_resource path="res://scenes/Favoritos.gd" type="Script" id=1]
[ext_resource path="res://img/bg2.jpg" type="Texture" id=2]
[ext_resource path="res://scenes/ScrollList.tscn" type="PackedScene" id=3]
[ext_resource path="res://img/button_voltar.jpg" type="Texture" id=4]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://img/buttonfav.jpg" type="Texture" id=6]
[ext_resource path="res://img/cancel.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = true
use_filter = true
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="Favoritos" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 720.0
margin_bottom = 1280.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="bg-container" type="Node2D" parent="." index="0"]

[node name="bg" type="Sprite" parent="bg-container" index="0"]

texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Offset" ]

[node name="FavList" parent="." index="1" instance=ExtResource( 3 )]

margin_top = 166.0
margin_right = 704.0
margin_bottom = 1100.0

[node name="BtnVoltar" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 1113.0
margin_right = 720.0
margin_bottom = 1279.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="FavAviso" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 120.0
margin_top = 230.0
margin_right = 600.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Ainda não há favoritos"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="Sprite" type="Sprite" parent="." index="4"]

texture = ExtResource( 6 )
centered = false
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Fechar" type="TextureButton" parent="." index="5"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 40.0
margin_right = 678.0
margin_bottom = 98.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
expand = true
_sections_unfolded = [ "Grow Direction", "Rect", "Textures" ]

[connection signal="pressed" from="BtnVoltar" to="." method="_on_BtnVoltar_pressed"]

[connection signal="pressed" from="Fechar" to="." method="_on_Fechar_pressed"]


